v1.4.0: performance, bug fixes, balance, UI scaling
- Fix toggle persistence: power toggle state now survives logout/relog
- Fix hunger_drain_modifier being non-functional (Feline, Draconic, Tiny,
  Hiveling, Gorgon, class modifiers all silently broken since launch)
- Replace Avian Saturation effect with 0.25x exhaustion multiplier
- Add FoodDataMixin to intercept Player.causeFoodExhaustion
- Eliminate per-tick layer sorting (TreeMap replaces sorted stream)
- Fix memory leaks: CompatTickScheduler, debounce map, minion tracker
  now cleaned on player logout
- Replace full player scan with AABB query for enchantment bonus
- Origin selection screen scales proportionally with window size
- Power descriptions in detail panel now word-wrap